# cogntiv_ex

./: .gitignore  README.md  client_main.py  common.py  server_main.py
cpp/: CMakeLists.txt  CsvWriter.h  DataPacket.h  RateTracker.h  StatsCalc.h  cogntiv_cpp.sln  common_util.h  cpp_client.cpp  cpp_client.vcxproj  cpp_client.vcxproj.filters
python/: client_main.py  common.py  server_main.py  unit_tests.py
